@@ -3,8 +3,6 @@
 ##
 
 
-include_libchipdir = $(includedir)/libchip
-
 LIBNAME = librtcio
 LIB = $(ARCH)/$(LIBNAME).a
 
@@ -14,10 +12,10 @@ C_FILES = rtcprobe.c icm7170.c icm7170_reg.c icm7170_reg2.c icm7170_reg4.c \
 
 OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
-include_libchip_HEADERS = rtc.h icm7170.h m48t08.h
 
 include $(top_srcdir)/../../automake/compile.am
 include $(top_srcdir)/../../automake/lib.am
+
 
 PREINSTALL_FILES = $(PROJECT_INCLUDE)/libchip \
     $(include_libchip_HEADERS:%=$(PROJECT_INCLUDE)/libchip/%)
@@ -30,11 +28,15 @@ $(PROJECT_INCLUDE)/libchip/%.h: %.h
 #
 # Add local stuff here using +=
 #
+if LIBCHIP
+include_libchipdir = $(includedir)/libchip
+include_libchip_HEADERS = rtc.h icm7170.h m48t08.h
 
 $(LIB): $(OBJS)
 	$(make-library)
 
 all-local: $(ARCH) $(PREINSTALL_FILES) $(LIB)
+endif
 
 DOC_FILES = README.ds1643 README.icm7170 README.m48t08 README.m48t18 STATUS
 
