@@ -3,8 +3,6 @@
 #
 
 
-include_libchipdir = $(includedir)/libchip
-
 LIBNAME = libserialio
 LIB = $(ARCH)/$(LIBNAME).a
 
@@ -14,7 +12,6 @@ C_FILES = mc68681.c mc68681_baud.c mc68681_reg.c mc68681_reg2.c \
 OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 noinst_HEADERS = mc68681_p.h ns16550_p.h z85c30_p.h
-include_libchip_HEADERS = mc68681.h ns16550.h z85c30.h serial.h sersupp.h
 
 include $(top_srcdir)/../../automake/compile.am
 include $(top_srcdir)/../../automake/lib.am
@@ -30,11 +27,15 @@ $(PROJECT_INCLUDE)/libchip/%.h: %.h
 #
 # Add local stuff here using +=
 #
+if LIBCHIP
+include_libchipdir = $(includedir)/libchip
+include_libchip_HEADERS = mc68681.h ns16550.h z85c30.h serial.h sersupp.h
 
 $(LIB): $(OBJS)
 	$(make-library)
 
 all-local: $(ARCH) $(PREINSTALL_FILES) $(LIB)
+endif
 
 DOC_FILES = README.mc68681 README.ns16550 README.xr88681 README.z85c30 \
     STATUS
